# gutty

./: LICENSE  README.md  golden_dangle_dashboard.py  push_to_github.sh  pyproject.toml  stress_test_formal.py  stress_test_hypothesis.py  validate.py  validate_final.py  video_export.py  visual_simulations.py
.github/workflows/: ci.yml
src/: dangle_solver.py
tda/analysis/: acd.py
tda/simulations/: cosmology.py  physics.py  quantum.py
tests/: test_dangle_solver.py  test_validation.py
