[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subjective-measurement-framework"
version = "2.0.0"
description = "A modular simulation framework for studying the gap between objective physical measurements and human/subjective reporting."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "The Subjective Measurement Collective"}]
requires-python = ">=3.9"
dependencies = ["numpy>=1.21.0", "scipy>=1.7.0", "matplotlib>=3.5.0", "plotly>=5.10.0", "ipywidgets>=7.7.0"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Topic :: Scientific/Engineering :: Physics"]

[project.scripts]
smf = "tda.cli:main"

[project.urls]
Homepage = "https://github.com/artistso/gutty"
Repository = "https://github.com/artistso/gutty"

[tool.setuptools.packages.find]
where = ["."]
